<resources>
    <string name="app_name">Happy Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="map_id">1f7f4ddd451a4a21</string>

    <string name="app_version">V 1.0.0</string>
    <string name="app_copy">@ Manula Kavishka 2023</string>
    <string name="search_hint">Search</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_category_title">Explore</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_message_title">Cart</string>
    <string name="side_nav_setting_title">Auto Brightness Setting</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="web_client_id">911257176881-r1ei5kplvjj5fs3rtdqsm8jpp9u62mhd.apps.googleusercontent.com</string>
    <string name="Province">Province</string>
    <string name="District">District</string>
    <string name="Area">Area</string>
    <string name="AddressType">Address Type</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>