<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".NewAddressActivity">

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="Full Name"
        android:textColor="#000000"
        android:textColorHint="#B6B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Mobile Number"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#B6B0B0"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName"
        tools:layout_editor_absoluteX="-32dp" />

    <Spinner
        android:id="@+id/spinnerProvince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/Province"
        app:layout_constraintTop_toBottomOf="@+id/editTextMobileNumber"
        tools:layout_editor_absoluteX="-16dp" />

    <Spinner
        android:id="@+id/spinnerDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/District"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProvince"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/spinnerArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/Area"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDistrict"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Address : House no./building/street/area"
        android:textColor="#000000"
        android:textColorHint="#B6B0B0"
        app:layout_constraintTop_toBottomOf="@+id/spinnerArea"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextLandmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Landmark"
        android:textColor="#000000"
        android:textColorHint="#B6B0B0"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress"
        tools:layout_editor_absoluteX="-16dp" />

    <Spinner
        android:id="@+id/spinnerAddressType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/AddressType"
        app:layout_constraintTop_toBottomOf="@+id/editTextLandmark"
        tools:layout_editor_absoluteX="-32dp" />

    <Button
        android:id="@+id/buttonSaveAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#0EE817"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAddressType" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Add New Address"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>